--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
 		"lite": "lite-server",
 		"postinstall": "typings install",
 		"tsc": "tsc",
-		"tsc:w": "tsc -w",
-		"typings": "typings"
+		"tsc:w": "tsc -w"
 	},
 	"author": {
 		"name": "John, Sing Dao, Siu",
@@ -24,17 +23,17 @@
 	},
 	"license": "MIT",
 	"dependencies": {
-		"@angular/common": "2.0.0-rc.4",
-		"@angular/compiler": "2.0.0-rc.4",
-		"@angular/core": "2.0.0-rc.4",
-		"@angular/platform-browser": "2.0.0-rc.4",
-		"@angular/platform-browser-dynamic": "2.0.0-rc.4",
+		"@angular/common": "2.0.0-rc.5",
+		"@angular/compiler": "2.0.0-rc.5",
+		"@angular/core": "2.0.0-rc.5",
+		"@angular/http": "2.0.0-rc.5",
+		"@angular/platform-browser": "2.0.0-rc.5",
+		"@angular/platform-browser-dynamic": "2.0.0-rc.5",
 		"reflect-metadata": "^0.1.3",
 		"systemjs": "0.19.27",
-		"core-js": "^2.4.0",
+		"es6-shim": "^0.35.0",
 		"rxjs": "5.0.0-beta.6",
-		"zone.js": "^0.6.12",
-		"ng2-simple-timer": "*"
+		"zone.js": "^0.6.12"
 	},
 	"devDependencies": {
 		"typescript": "*",
