--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "simple-mq-example",
 	"description": "Angular 2 simple message queue example",
-	"version": "1.2.4",
+	"version": "1.2.6",
 	"scripts": {
 		"start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
 		"lite": "lite-server",
@@ -22,18 +22,18 @@
 	},
 	"license": "MIT",
 	"dependencies": {
-		"@angular/common": "2.0.0",
-		"@angular/compiler": "2.0.0",
-		"@angular/core": "2.0.0",
-		"@angular/http": "2.0.0",
-		"@angular/platform-browser": "2.0.0",
-		"@angular/platform-browser-dynamic": "2.0.0",
+		"@angular/common": "^2.4.0",
+		"@angular/compiler": "^2.4.0",
+		"@angular/core": "^2.4.0",
+		"@angular/http": "^2.4.0",
+		"@angular/platform-browser": "^2.4.0",
+		"@angular/platform-browser-dynamic": "^2.4.0",
 		"reflect-metadata": "^0.1.3",
 		"systemjs": "0.19.27",
 		"es6-shim": "^0.35.0",
-		"rxjs": "5.0.0-beta.12",
-		"zone.js": "^0.6.12",
-		"ng2-simple-timer": "1.2.4"
+		"rxjs": "^5.0.1",
+		"zone.js": "^0.7.4",
+		"ng2-simple-timer": "1.2.6"
 	},
 	"devDependencies": {
 		"typescript": "*",
