--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
 	"scripts": {
 		"start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
 		"lite": "lite-server",
-		"postinstall": "typings install",
 		"tsc": "tsc",
 		"tsc:w": "tsc -w"
 	},
@@ -22,23 +21,22 @@
 	},
 	"license": "MIT",
 	"dependencies": {
-		"@angular/common": "^2.4.0",
-		"@angular/compiler": "^2.4.0",
-		"@angular/core": "^2.4.0",
-		"@angular/http": "^2.4.0",
-		"@angular/platform-browser": "^2.4.0",
-		"@angular/platform-browser-dynamic": "^2.4.0",
-		"reflect-metadata": "^0.1.3",
-		"systemjs": "0.19.27",
-		"es6-shim": "^0.35.0",
-		"rxjs": "^5.0.1",
+		"@angular/common": "~2.4.0",
+		"@angular/compiler": "~2.4.0",
+		"@angular/core": "~2.4.0",
+		"@angular/http": "~2.4.0",
+		"@angular/platform-browser": "~2.4.0",
+		"@angular/platform-browser-dynamic": "~2.4.0",
+		"systemjs": "0.19.40",
+		"core-js": "^2.4.1",
+		"rxjs": "5.0.1",
 		"zone.js": "^0.7.4",
-		"ng2-simple-timer": "1.2.6"
+		"ng2-simple-timer": "1.2.9"
 	},
 	"devDependencies": {
 		"typescript": "*",
-		"typings": "*",
-		"concurrently": "^2.0.0",
-		"lite-server": "^2.2.2"
+		"concurrently": "^3.1.0",
+		"lite-server": "^2.2.2",
+		"@types/node": "^6.0.46"
 	}
 }
