--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
 	"name": "simple-mq-example",
 	"description": "Angular 2 simple message queue example",
-	"version": "1.2.6",
+	"version": "1.2.8",
 	"scripts": {
 		"start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
 		"lite": "lite-server",
 		"tsc": "tsc",
 		"tsc:w": "tsc -w"
 	},
-  "author": {
-    "name": "John, Sing Dao, Siu",
-    "url": "https://github.com/J-Siu"
-  },
+	"author": {
+		"name": "John, Sing Dao, Siu",
+		"url": "https://github.com/J-Siu"
+	},
 	"bugs": {
 		"url": "https://github.com/J-Siu/ng2-simple-timer-example/issues"
 	},
@@ -21,22 +21,24 @@
 	},
 	"license": "MIT",
 	"dependencies": {
-		"@angular/common": "~2.4.0",
-		"@angular/compiler": "~2.4.0",
-		"@angular/core": "~2.4.0",
-		"@angular/http": "~2.4.0",
-		"@angular/platform-browser": "~2.4.0",
-		"@angular/platform-browser-dynamic": "~2.4.0",
-		"systemjs": "0.19.40",
+		"@angular/common": "~4.3.1",
+		"@angular/compiler": "~4.3.1",
+		"@angular/core": "~4.3.1",
+		"@angular/http": "~4.3.1",
+		"@angular/platform-browser": "~4.3.1",
+		"@angular/platform-browser-dynamic": "~4.3.1",
+		"angular2-uuid": "^1.1.1",
 		"core-js": "^2.4.1",
-		"rxjs": "5.0.1",
-		"zone.js": "^0.7.4",
-		"ng2-simple-timer": "1.2.9"
+		"ng2-simple-timer": "1.3.2",
+		"rxjs": "^5.1.0",
+		"systemjs": "0.19.39",
+		"zone.js": "^0.8.4"
 	},
 	"devDependencies": {
-		"typescript": "*",
-		"concurrently": "^3.1.0",
-		"lite-server": "^2.2.2",
-		"@types/node": "^6.0.46"
+		"@types/angular": "^1.5.16",
+		"typescript": "~2.3.2",
+		"concurrently": "^3.0.0",
+		"lite-server": "*",
+		"@types/node": "^6.0.45"
 	}
 }
