--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "simple-mq-example",
 	"description": "Angular 2 simple message queue example",
-	"version": "1.3.3",
+	"version": "6.0.0",
 	"scripts": {
 		"start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
 		"lite": "lite-server",
@@ -21,24 +21,23 @@
 	},
 	"license": "MIT",
 	"dependencies": {
-		"@angular/common": "~4.3.1",
-		"@angular/compiler": "~4.3.1",
-		"@angular/core": "~4.3.1",
-		"@angular/http": "~4.3.1",
-		"@angular/platform-browser": "~4.3.1",
-		"@angular/platform-browser-dynamic": "~4.3.1",
+		"@angular/common": "^6.1.0",
+		"@angular/compiler": "^6.1.0",
+		"@angular/core": "^6.1.0",
+		"@angular/http": "^6.1.0",
+		"@angular/platform-browser": "^6.1.0",
+		"@angular/platform-browser-dynamic": "^6.1.0",
 		"angular2-uuid": "^1.1.1",
-		"core-js": "^2.4.1",
-		"ng2-simple-timer": "1.3.5",
-		"rxjs": "^5.1.0",
-		"systemjs": "0.19.39",
-		"zone.js": "^0.8.4"
+		"core-js": "^2.5.4",
+		"ng2-simple-timer":"^6.0.0",
+		"rxjs": "^6.0.0",
+		"systemjs": "^0.21.4",
+		"zone.js": "~0.8.26"
 	},
 	"devDependencies": {
-		"@types/angular": "^1.5.16",
-		"typescript": "~2.3.2",
+		"typescript": "~2.7.2",
 		"concurrently": "^3.0.0",
 		"lite-server": "*",
-		"@types/node": "^6.0.45"
+		"@types/node": "^8.9.4"
 	}
 }
